[package]
name = "new-renderer"
version = "0.1.0"
authors = ["Kamil Tomšík <info@tomsik.cz>"]
edition = "2018"

[dependencies]
# gl = "0.14"
# sdl2 = "0.33"
# sdl2-sys = "0.33"
raqote = { version = "0.7.10", default-features = false }
# graffiti-yoga = { git = "https://github.com/cztomsik/graffiti" }
